// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.html - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<!-- @prettier -->

<div
            >  666             </div>

=====================================output=====================================
<!-- @prettier -->

<div>666</div>

================================================================================
`;

exports[`without-pragma.html - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<div
            >  666             </div>

=====================================output=====================================
<div
            >  666             </div>

================================================================================
`;
